--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "restaurant_search_service",
+  "name": "travel_advisor_search_service",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11",
     "@react-google-maps/api": "^2.7.0",
     "framer-motion": "^5",
+    "google-map-react": "^2.1.10",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.3",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "eslint": "8.6.0",
