--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@react-google-maps/api": "^2.7.0",
+    "axios": "^0.24.0",
     "framer-motion": "^5",
     "google-map-react": "^2.1.10",
     "next": "12.0.8",
