--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watchAll",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
@@ -22,11 +24,16 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/google-map-react": "^2.1.3",
+    "@types/jest": "^27.4.0",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.4.7",
     "typescript": "4.5.4"
   }
 }
