--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@react-google-maps/api": "^2.7.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.24.0",
     "framer-motion": "^5",
     "google-map-react": "^2.1.10",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.2",
