--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.2",
@@ -32,6 +33,7 @@
     "@types/jest": "^27.4.0",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "@types/redux-logger": "^3.0.9",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
     "identity-obj-proxy": "^3.0.0",
