--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watchAll",
-    "coverage": "jest --coverage"
+    "coverage": "rm -rf ./coverage && jest --coverage"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
